--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -1,3 +1,9 @@
 OPENAI_API_KEY=sk-proj-1234567890
 # Optional - Cloudflare AI Gateway https://developers.cloudflare.com/ai-gateway/
 # GATEWAY_BASE_URL=https://gateway.ai.cloudflare.com/v1/..
+
+# Chatwoot Configuration (optional - for webhook integration)
+# CHATWOOT_BASE_URL=https://your-chatwoot-instance.com
+# CHATWOOT_API_KEY=your_chatwoot_api_access_token
+# CHATWOOT_ACCOUNT_ID=your_account_id
+# CHATWOOT_WEBHOOK_SECRET=your_webhook_secret_if_configured
