feat(server): implement R2 storage, queue system, and Chatwoot improvements
- Add R2 storage endpoints for file upload, download, delete, and list
- Implement queue system with various message types and batch processing
- Enhance Chatwoot webhook handling with validation and debug logging
- Refine AI agent prompts and capabilities
- Set up queue consumer for message processing

--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -1,4 +1,5 @@
 OPENAI_API_KEY=sk-proj-1234567890
+
 # Optional - Cloudflare AI Gateway https://developers.cloudflare.com/ai-gateway/
 # GATEWAY_BASE_URL=https://gateway.ai.cloudflare.com/v1/..
 
@@ -7,3 +8,14 @@ OPENAI_API_KEY=sk-proj-1234567890
 # CHATWOOT_API_KEY=your_chatwoot_api_access_token
 # CHATWOOT_ACCOUNT_ID=your_account_id
 # CHATWOOT_WEBHOOK_SECRET=your_webhook_secret_if_configured
+
+# ElevenLabs Text-to-Speech Configuration (optional - for voice messages)
+# Get your API key from: https://elevenlabs.io/app/settings/api-keys
+# ELEVENLABS_API_KEY=your_elevenlabs_api_key
+# CLOUDFLARE_ACCOUNT_ID=your_cloudflare_account_id
+# AI_GATEWAY_ID=your_ai_gateway_id
+
+# R2 Storage Configuration
+# The R2 bucket is configured in wrangler.jsonc
+# Bucket name: bucket_my-agent
+# No environment variables needed - R2 is accessed via binding
