--- a/workflows/holy-mouse-3f4c/wrangler.jsonc
+++ b/workflows/holy-mouse-3f4c/wrangler.jsonc
@@ -7,16 +7,14 @@
 	"name": "holy-mouse-3f4c",
 	"main": "src/index.ts",
 	"compatibility_date": "2025-11-01",
-	"compatibility_flags": [
-		"global_fetch_strictly_public"
-	],
+	"compatibility_flags": ["global_fetch_strictly_public"],
 	"assets": {
 		// The path to the directory containing the `index.html` file to be served at `/`
-		"directory": "./public"
+		"directory": "./public",
 	},
 	"observability": {
-		"enabled": true
-	}
+		"enabled": true,
+	},
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
